--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <section id="galeria" class="section">
       <h2>Galeria de Imagens</h2>
-      <div class="image-box">
+      <div class="image-box">Sua po
         <img src="https://via.placeholder.com/800x400.png?text=Campo+e+Cidade&quot; alt="Conexão do Campo e Cidade">
       </div>
     </section>
