--- a/index.html
+++ b/index.html
@@ -81,29 +81,29 @@
 <body>
 
   <header>
-    <h1>Festejando a Conexão do Campo e da Cidade</h1>
+    <h1>Conexão entre Campo e Cidade</h1>
   </header>
 
   <nav>
     <a href="#objetivo">Objetivo</a>
-    <a href="#atividades">Atividades</a>
+    <a href="#atividades">Exemplos</a>
     <a href="#galeria">Galeria</a>
   </nav>
 
   <div class="container">
 
     <section id="objetivo" class="section">
-      <h2>Objetivo do Projeto</h2>
-      <p>Este projeto tem como foco celebrar e fortalecer a conexão entre o campo e a cidade, destacando a importância da agricultura, do comércio, da cultura e da cooperação mútua para um desenvolvimento sustentável e justo.</p>
+      <h2>Objetivo</h2>
+      <p>A relação entre campo e cidade é fundamental para o desenvolvimento econômico e social de uma região. O campo, também chamado de zona rural, é onde ocorre a produção agrícola e pecuária, que abastece a população urbana com alimentos e matérias-primas. A cidade, por sua vez, oferece infraestrutura e serviços essenciais para o campo, como maquinário agrícola, fertilizantes, transporte, escolas, hospitais, entre outros. </p>
     </section>
 
     <section id="atividades" class="section">
-      <h2>Atividades Desenvolvidas</h2>
+      <h2>Exemplos</h2>
       <ul>
-        <li>Feira de produtos locais: “Do Campo à Mesa”.</li>
-        <li>Entrevistas com agricultores e comerciantes urbanos.</li>
-        <li>Oficinas de culinária e sustentabilidade.</li>
-        <li>Exposição de artes com materiais recicláveis.</li>
+        <li>A produção de trigo no campo é transformada em farinha na cidade, que é utilizada para fazer pão e outros alimentos</li>
+        <li>A criação de gado no campo fornece carne e leite para o consumo na cidade.</li>
+        <li>A cidade oferece máquinas e equipamentos modernos para a produção agrícola no campo. </li>
+        <li>O campo fornece matéria-prima para a indústria têxtil, que produz roupas na cidade. </li>
       </ul>
     </section>
 
