--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <nav>
     <a href="#objetivo">Objetivo</a>
     <a href="#atividades">Exemplos</a>
-    <a href="#galeria">Galeria</a>
+    <a href="#galeria">AGRINHO</a>
   </nav>
 
   <div class="container">
@@ -107,9 +107,9 @@
       </ul>
     </section>
 
-    <section id="galeria" class="section">
+    <section id="AGRINHO" class="section">
       <h2>Galeria de Imagens</h2>
-      <div class="image-box">Sua po
+      <div class="download.jpeg">Sua po
         <img src="https://via.placeholder.com/800x400.png?text=Campo+e+Cidade&quot; alt="Conexão do Campo e Cidade">
       </div>
     </section>
