--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <section id="objetivo" class="section">
       <h2>Objetivo</h2>
-      <p>A relação entre campo e cidade é fundamental para o desenvolvimento econômico e social de uma região. O campo, também chamado de zona rural, é onde ocorre a produção agrícola e pecuária, que abastece a população urbana com alimentos e matérias-primas. A cidade, por sua vez, oferece infraestrutura e serviços essenciais para o campo, como maquinário agrícola, fertilizantes, transporte, escolas, hospitais, entre outros. </p>
+      <p>Campo e cidade representam dois tipos distintos de ambientes, com características e modos de vida diferentes. O campo, ou zona rural, é caracterizado por atividades como agricultura e pecuária, baixa densidade populacional e uma forte conexão com a natureza. A cidade, ou zona urbana, por outro lado, apresenta alta densidade populacional, diversidade de atividades econômicas, como indústria e comércio, e infraestrutura mais desenvolvida. Ambos os espaços são interdependentes, com a cidade dependendo do campo para recursos naturais e matérias-primas, e o campo se beneficiando dos serviços e tecnologias oferecidos pela cidade. A relação entre campo e cidade é fundamental para o desenvolvimento econômico e social de uma região. O campo, também chamado de zona rural, é onde ocorre a produção agrícola e pecuária, que abastece a população urbana com alimentos e matérias-primas. A cidade, por sua vez, oferece infraestrutura e serviços essenciais para o campo, como maquinário agrícola, fertilizantes, transporte, escolas, hospitais, entre outros. </p>
     </section>
 
     <section id="atividades" class="section">
@@ -109,8 +109,8 @@
 
     <section id="AGRINHO" class="section">
       <h2>Galeria de Imagens</h2>
-      <div class="download.jpeg">Sua po
-        <img src="https://via.placeholder.com/800x400.png?text=Campo+e+Cidade&quot; alt="Conexão do Campo e Cidade">
+      <div class="image-box">
+        <img src="download.jpeg"Conexão do Campo e Cidade">
       </div>
     </section>
 
